crates/cosmon-cli/tests/snapshots/help__whisper.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Whisper — inject a perturbation payload into a live worker's tmux pane (v0)

Molecule delivery refuses on money-stake markers and recognised unknown confirmation/menu widgets in the active pane tail. The latest idle input field supersedes earlier scrollback. Confirmations such as [y/n] and risky prompts without a permission marker remain blocking. Ordinary output and routine permission prompts remain deliverable. A dialogue refusal reports the rule and matched pane tail lines.

Usage: cs whisper [OPTIONS] [MOLECULE_ID]

Arguments:
  [MOLECULE_ID]
          Molecule whose worker pane will receive the whisper.
          
          Optional because `--to-session` is an alternative destination; enforced at runtime so clap's error text points at the mutual exclusion rather than an unsatisfied positional.

Options:
      --config <PATH>
          Path to configuration file

      --to-session <SID>
          Target a Claude session by id — appends one line to `.cosmon/state/presence/<sid>.log` instead of pasting into a tmux pane. Mutually exclusive with the positional `<molecule_id>`.
          
          CEILING: whispers accumulate in the log; beyond ~10 per session the signal drowns in the tail. Past that, fall back to `cs drop` / `cs tail`.

  -m, --message <TEXT>
          Inline payload. Mutually exclusive with `--file` / `--stdin`

  -v, --verbose
          Enable verbose output

  -f, --file <PATH>
          Read payload from a file. Mutually exclusive with `--message` / `--stdin`

      --json
          Output in JSON format

      --stdin
          Read payload from stdin (conventional `-`). Mutually exclusive with `--message` / `--file`

      --dry-run
          Validate and log the payload without actually pasting into tmux.
          
          In `--to-session` mode, skips the append (and the seek bump) — useful for CI-style sanity checks.

  -h, --help
          Print help (see a summary with '-h')

EXAMPLES:
  cs whisper <mol> --message "check the latest ADR before merging"
  cs whisper <mol> --file hint.md
  echo "nudge" | cs whisper <mol> --stdin
  cs whisper <mol> --message "…" --dry-run      # validate, do not paste

Experimental v0. Perturbation port, not a control-plane event.
Refuses unless the target pane's foreground command has an allowed pane
signature. A money-stake marker or a recognised unknown confirmation/menu
widget refuses with exit 5; unknown means the widget is real but its choice
is not safe to infer. Ordinary output without those signals is delivered.
Routine permission prompts remain deliverable. A refusal prints the matching
rule and pane tail lines so the operator can inspect the choice.

To wait for the worker's answer, follow with `cs wait <mol>`: even on
a completed molecule it returns only after a new commit on feat/<mol>.
