crates/cosmon-cli/tests/snapshots/help__work.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Separate molecules — an implementer and a reviewer, say, on the same
provider or on two different ones — exchange findings under a declared,
bounded work scope (ADR-182). Each molecule keeps its own lifecycle,
branch and permissions; it stays visible in `cs peek` and is harvested on
its own. Messages carry evidence and requests only: they never advance a
molecule, satisfy a dependency or grant one molecule authority over
another.

The owning molecule declares a finite seat roster once (`declare`); each
member then sends bounded evidence to another seat (`send`), pulls what is
addressed to it (`inbox`), and reports how it treated a message
(`ack`). `list` rebuilds every message's stage — admitted, delivered,
consumed — from canonical evidence, for any member or for the owner.

For two live sessions on ONE mission instead, where a human signature
moves the controls between them, see `cs sessions`.

Usage: cs work [OPTIONS] <COMMAND>

Commands:
  declare  Declare or revise a finite roster under an owning molecule
  send     Admit bounded evidence from this member to another seat
  inbox    Pull messages addressed to this member at a safe point
  ack      Report how this member treated a received message
  list     Rebuild the owner's message stages from canonical evidence

Options:
      --config <PATH>
          Path to configuration file

  -v, --verbose
          Enable verbose output

      --json
          Output in JSON format

  -h, --help
          Print help (see a summary with '-h')

EXAMPLES:
  cs nucleate task-work --var topic='review task-2026...-0001'  # reviewer molecule
  cs tackle <reviewer> --adapter codex --model gpt-5.6-sol    # on another provider
  cs work declare <owner> --seat impl=<implementer> --seat review=<reviewer>
  cs work send --to review --text 'finding: the retry loop never backs off'
  cs work inbox                                                # pull what is addressed to me
  cs work ack <key> --considered                               # or --deferred / --rejected
  cs work list <owner>                                         # every message's stage, from evidence

RECIPE — implementer + cross-vendor reviewer (book: how-to/pair-implementer-and-reviewer):
  1. Launch. Nucleate the implementer, then the reviewer with the
     implementer's id as a variable (no `sed` into a brief):
       impl=$(cs nucleate task-work --var topic="..." --json | jq -r .id)
       rev=$(cs nucleate task-work --var topic="review $impl" --var impl=$impl --json | jq -r .id)
       cs work declare "$impl" --seat impl="$impl" --seat review="$rev"
       cs tackle "$impl" --adapter claude --model <model>
       cs tackle "$rev"  --adapter codex  --model <model>
     The owner is the implementer. Pin the model explicitly on each seat.
  2. Implementer brief: goal, the request verbatim, inputs by path,
     numbered items, constraints, deliverables. Read `cs work inbox` at
     each milestone and ack. Send `--phase final` to `review`, naming the
     final sha, before `cs complete`. Notes go to a per-molecule path.
  3. Reviewer brief: find the peer with `cs work list` (or the impl id
     variable); challenge at each milestone with `cs work send --to impl`;
     3-6 task-specific checks; recompute one number independently from
     saved outputs; every verdict names the impl sha it reviewed; do not
     `cs complete` until the impl sent `final` or is terminal.
  4. Steer with `cs whisper` to each seat, never with `cs work send`: a
     roster message can be acked --rejected, a steering order must not be.
     A real stop is `cs collapse`.
  5. Watch with `cs work list <owner>` and `cs observe <seat>`. An impl
     that is collapsed while the reviewer is live, or a reviewer that is
     completed against an older impl sha, is yours to decide on.
  6. When the implementer terminates, read its reason kind. A worker that
     finished but could not pass the gates for an infrastructure cause
     collapses with `--reason-kind verification_blocked --reason 'work
     committed at <sha>; <gate> failed: <class>'` (find them with `cs
     errors --kind verification_blocked`). That label is the worker's
     claim, never merge-safety evidence: check `git log main..<branch>`
     and whether the failing test touches the diff, then decide. Audit any
     collapsed branch before deleting it.
  7. Settle: `cs collapse <impl> --with-seats` collapses every live seat
     with the owner's reason, skips a completed seat (and prints `cs done
     <seat>`), never merges. Then `cs done` per seat; add `--no-merge` for
     an implementer you already merged by hand.
  8. Continue under a NEW owner: settle the old pair, nucleate both new
     seats with `--decayed-from <old>`, open the brief with "Continuation
     of <old id> (<reason>): merged, do not redesign: ...; remains: ...".
     Never re-declare a seat name onto another molecule under the old
     owner. The new reviewer starts cold; that cost is accepted.
  9. Review notes: one file per molecule (notes/<mol_id>.md); regenerate
     aggregates on main. Never union-merge code.
 10. Cost: reviewer on the other or the cheaper provider; strongest
     models for framing and arbitration only. No savings are measured yet.

Neither molecule's lifecycle moves because of a message: retries,
acceptance and integration stay with each molecule's own owner. Provider
diversity, if a formula requires it, is declared on the seat — see ADR-182
§'Provider diversity is a seat property' — not implied by using `cs work`
at all.

SEE ALSO: cs sessions (two live sessions on one mission, human-signed
handover), cs nucleate (create the reviewer molecule), cs tackle (spawn its
worker).
