crates/cosmon-cli/tests/snapshots/help__work_list.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Rebuild the owner's message stages from canonical evidence

Usage: cs work list [OPTIONS] [OWNER]

Arguments:
  [OWNER]  Owner molecule; defaults to the caller's declared work

Options:
      --config <PATH>  Path to configuration file
      --pending        Only envelopes still pending for a recipient
      --open           Only envelopes without a consumption report
  -v, --verbose        Enable verbose output
      --json           Output in JSON format
  -h, --help           Print help
